chore: update module names for better open source contribution and added third parties library licences file generation